# productivity_personal-email-slack-assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  railway.json
personal_linkedin_dm_assistant/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  selectors.js
scripts/: gmail_auth.py
src/assistant/: app.py  config.py  db.py  models.py
src/assistant/drafts/: generator.py  store.py
src/assistant/email/: classifier.py  gmail_client.py  scanner.py
src/assistant/notifications/: notifier.py
src/assistant/slack_monitor/: classifier.py  listener.py
src/assistant/voice/: analyzer.py  feedback.py  profile.py
